add createSelect to visible todos

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.1.2",
-    "redux": "^3.1.2"
+    "redux": "^3.1.2",
+    "reselect": "^2.5.1",
+    "why-did-you-update": "0.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
